<resources>
    <string name="app_name">BitsAndPizzas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="which_type_of_pizza_would_you_like">which type of pizza would you like?</string>
    <string name="diavolo">Diavolo</string>
    <string name="funghi">Funghi</string>
    <string name="chilli_oil">Chilli Oil</string>
    <string name="parmesan">Parmesan</string>
    <string name="please_choose_any_extras">Please choose any extras:</string>
    <string name="fab">fab</string>
</resources>